--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/lauragift21/Concatenate-vuepress/issues"
   },
-  "homepage": "https://github.com/lauragift21/Concatenate-vuepress#readme"
+  "homepage": "https://github.com/lauragift21/Concatenate-vuepress#readme",
+  "devDependencies": {
+    "vuepress": "^0.12.0"
+  }
 }
